# roteiro-estudos-python

./: .gitignore  LICENSE  README.md  pyproject.toml
exercicios/dia1/black-jack/: README.md  black_jack.py
exercicios/dia1/ghost-gobble-arcade-game/: README.md  arcade_game.py
exercicios/dia1/little-sisters-vocab/: README.md  strings.py
exercicios/dia2/cater-waiter/: README.md  sets.py
exercicios/dia2/chaitanas-colossal-coaster/: README.md  list_methods.py
exercicios/dia2/inventory-management/: dicts.py  dicts_test.py
exercicios/dia3/gigasecond/: README.md  gigasecond.py  gigasecond_test.py
exercicios/dia3/hamming/: README.md  hamming.py  hamming_test.py
exercicios/dia3/wordy/: README.md  wordy.py  wordy_test.py
exercicios/dia4/bank-account/: README.md  bank_account.py  bank_account_test.py
exercicios/dia4/phone-number/: README.md  phone_number.py  phone_number_test.py
exercicios/dia4/queen-attack/: README.md  queen_attack.py  queen_attack_test.py
exercicios/dia5/making-the-grade/: README.md  loops.py
exercicios/dia5/word-search/: word_search_test.py
