[tool.poetry]
name = "roteiro-estudos-python-2022"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.pytest.ini_options]
markers = [
    "task: A concept exercise task.",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
